@@ -1,10 +1,12 @@
 package org.lessons.bestoftheyear.controller;
 
+import org.lessons.bestoftheyear.model.Song;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Controller
@@ -13,13 +15,17 @@ public class SongController {
 
     @GetMapping
     public String bestSongs(Model model) {
-        List<String> songs = getBestSongs();
-        String songList = String.join(", ", songs);
-        model.addAttribute("songList", songList);
+        List<Song> songs = getBestSongs();
+        model.addAttribute("songList", songs);
         return "song-list";
     }
 
-    private List<String> getBestSongs() {
-        return List.of("Money", "The Wall", "The Dark Side of the Moon");
+    private List<Song> getBestSongs() {
+        Song[] bestSongs = {
+                new Song(1,"Money"),
+                new Song(2,"The Wall"),
+                new Song(3,"The Dark Side of the Moon")
+        };
+        return Arrays.asList(bestSongs);
     }
 }
